<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spconv_example</name>
  <version>0.0.1</version>
  <description>The spconv_example package</description>
  <maintainer email="kenzolobos@gmail.com">Kenzo Lobos-Tsunekawa</maintainer>

  <license>Apache 2</license>
  <author>Kenzo Lobos-Tsunekawa</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ros_environment</buildtool_depend>

  <depend>cumm</depend>
  <depend>spconvlib</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
